--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "koa": "^2.13.4",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
-    "mustache": "^4.2.0"
+    "mustache": "^4.2.0",
+    "pino": "^7.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
